--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     </h1>MRF</h1>
-    <script src="MRF.js"></script>
+    <script src="mrfpractice.js"></script>
 </body>
 </html>
